src/css/screen.css
/* ... */
article,
aside,
details,
footer,
header,
hr,
main,
menu,
nav,
section,
summary {
    display: block;
}
hr,
img,
legend {
    border: 0;
}
pre,
textarea {
    overflow: auto;
}
.nav-close,
hr,
legend,
pre code,
pre tt,
td,
th {
    padding: 0;
}

pre + h2 {
    margin-top: 4rem;
}

blockquote small,
kbd {
    display: inline-block;
}
a,
table {
    background-color: transparent;
}
mark,
table th {
    color: #000;
}
.inner,
.main-header,
.main-nav,
.site-wrapper,
sub,
sup {
    position: relative;
}
.nav li a,
dl dt {
    text-overflow: ellipsis;
}
.menu-button:focus,
.nav-close:focus,
a:active,
a:hover {
    outline: 1;
}
html {
    font-family: "Open Sans", sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}
body {
    margin: 0;
}
audio,
canvas,
progress {
    display: inline-block;
    vertical-align: baseline;
}
audio:not([controls]) {
    display: none;
    height: 0;
}
[hidden],
template {
    display: none;
}
a {
    color: #4A4A4A;
    transition: color 0.3s ease;
}
abbr[title] {
    border-bottom: 1px dotted;
}
b,
optgroup,
strong {
    font-weight: 700;
}
dfn {
    font-style: italic;
}
mark {
    background: #FDFFB6;
}
small {
    font-size: 80%;
}
sub,
sup {
    font-size: 75%;
    line-height: 0;
    vertical-align: baseline;
}
sup {
    top: -0.5em;
}
sub {
    bottom: -0.25em;
}
figure {
    margin: 1em 40px;
}
code,
kbd,
pre,
samp {
    font-family: monospace, monospace;
    font-size: 1em;
}
button,
input,
optgroup,
select,
textarea {
    color: inherit;
    font: inherit;
    margin: 0;
}
button {
    overflow: visible;
}
button,
select {
    text-transform: none;
}
button,
html input[type=button],
input[type=reset],
input[type=submit] {
    -webkit-appearance: button;
    cursor: pointer;
}
button[disabled],
html input[disabled] {
    cursor: default;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
    border: 0;
    padding: 0;
}
input {
    line-height: normal;
}
input[type=checkbox],
input[type=radio] {
    box-sizing: border-box;
    padding: 0;
}
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    height: auto;
}
input[type=search] {
    -webkit-appearance: textfield;
}
input[type=search]::-webkit-search-cancel-button,
input[type=search]::-webkit-search-decoration {
    -webkit-appearance: none;
}
fieldset {
    border: 1px solid silver;
    margin: 0 2px;
    padding: 0.35em 0.625em 0.75em;
}
@font-face {
    font-family: casper-icons;
    src: url(/css/fonts/casper-icons.eot);
    src: url(/css/fonts/casper-icons.eot) format("embedded-opentype"), url(/css/fonts/casper-icons.woff) format("woff"), url(/css/fonts/casper-icons.ttf) format("truetype"), url(/css/fonts/casper-icons.svg) format("svg");
    font-weight: 400;
    font-style: normal;
}
[class*=" icon-"]:before,
[class^=icon-]:before {
    font-family: casper-icons, "Open Sans", sans-serif;
    speak:none;
    font-style: normal;
    font-weight: 450;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    text-decoration: none !important;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
blockquote cite,
dl dt {
    font-weight: 700;
}
.main-nav a,
.nav li a,
.post-meta a,
.post-title a,
.read-more,
.scroll-down,
.subscribe-button {
    text-decoration: none;
}
.icon-ghost:before {
    content: "\f600";
}
.icon-feed:before {
    content: "\f601";
}
.icon-twitter:before {
    content: "\f602";
    font-size: 1.1em;
}
.icon-google-plus:before {
    content: "\f603";
}
.icon-facebook:before {
    content: "\f604";
}
.icon-arrow-left:before {
    content: "\f605";
}
.icon-stats:before {
    content: "\f606";
}
.icon-location:before {
    content: "\f607";
    margin-left: -3px;
}
dl,
ol,
p,
pre,
ul {
    margin: 2.0em 0 2.0em;
}
.icon-link:before {
    content: "\f608";
}
.icon-menu:before {
    content: "\f609";
}
html {
    height: 100%;
    font-size: 62.5%;
    -webkit-tap-highlight-color: transparent;
}
body {
    height: 100%;
    font-family: Merriweather, serif;
    letter-spacing: 0.01rem;
    font-size: 1.8rem;
    line-height: 1.75em;
    color: #3A4145;
    -webkit-font-feature-settings: 'kern' 1;
    -moz-font-feature-settings: 'kern' 1;
    -o-font-feature-settings: 'kern' 1;
}
.page-title,
.subscribe-button,
h1,
h2,
h3,
h4,
h5,
h6,
.nav-home {
    font-family: "Open Sans", sans-serif;
}
::-moz-selection {
    background: #D6EDFF;
}
::selection {
    background: #D6EDFF;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    -webkit-font-feature-settings: 'dlig' 1,'liga' 1,'lnum' 1,'kern' 1;
    -moz-font-feature-settings: 'dlig' 1,'liga' 1,'lnum' 1,'kern' 1;
    -o-font-feature-settings: 'dlig' 1,'liga' 1,'lnum' 1,'kern' 1;
    color: #2E2E2E;
    line-height: 1.15em;
    margin: 0 0 0.4em;
}
code,
pre,
tt {
    font-family: Inconsolata, monospace, sans-serif;
    background: #F7FAFB;
}
h1 {
    font-size: 5rem;
    letter-spacing: -2px;
    text-indent: -3px;
}
.page-title,
h2 {
    letter-spacing: -1px;
}
h2 {
    font-size: 3.6rem;
}
h3 {
    font-size: 3rem;
}
h4 {
    font-size: 2.5rem;
}
h5,
h6 {
    font-size: 2rem;
}

.listing-content a:hover,
.post-content a:hover {
    background-color: #f0f0f0;
    color: #4A4A4A;
}

.listing-content a,
.post-content a {
    color: #8A8A8A;
    text-decoration: underline;
    -webkit-text-decoration-color: #ACACAC;
    font-weight: bold;
}

dl,
ol,
p,
ul {
    -webkit-font-feature-settings: 'liga' 1,'onum' 1,'kern' 1;
    -moz-font-feature-settings: 'liga' 1,'onum' 1,'kern' 1;
    -o-font-feature-settings: 'liga' 1,'onum' 1,'kern' 1;
}
ol,
ul {
    padding-left: 3rem;
}
ol ol,
ol ul,
ul ol,
ul ul {
    margin: 0 0 0.4em;
    padding-left: 2em;
}
dl dt {
    float: left;
    width: 180px;
    clear: left;
    text-align: right;
    white-space: nowrap;
}
dl dd {
    margin-left: 200px;
}
li {
    margin: 0.4em 0;
}
li li {
    margin: 0;
}
/* ... */

